# Mauve

./: .gitignore  .kateproject  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_compile_and_run.bat  cmake_install.cmake  compile.bat  compile.bat~  compile_and_run.bat  run_bat_wrapper.bat
include/: camera.hpp
include/engine/: buffer_helper.cpp  buffer_helper.hpp  device_data.hpp  engine.cpp  engine.hpp  helper_functions.cpp  helper_functions.hpp
include/engine/descriptors/: descriptor.cpp  descriptor.hpp
include/engine/device/: device.cpp  device.hpp
include/engine/material/: material.cpp  materials.hpp
include/engine/mesh/: mesh.cpp  mesh.hpp
include/engine/pipeline/: pipeline.cpp  pipeline.hpp
include/engine/texture/: texture.cpp  texture.hpp
include/engine/window/: window.cpp  window.hpp
include/engine/world_object/: world_object.cpp  world_object.hpp
include/game/: chunk.cpp  chunk.hpp
include/vulkan/: vulkan_core.h
lib/: tinyobjloader.lib
source/: main.cpp
